# pipfp-rs

./: 404.html  Cargo.toml  index.html  mkdocs.yml
docs/: index.md
search/: search_index.json
src/: main.rs
